move images to img folder, use sprite instead of single icon file, fixed padding for section title on tablet

--- a/src/css/components/advantages.css
+++ b/src/css/components/advantages.css
@@ -55,8 +55,13 @@
       font-weight: bold;
       color: rgb(var(--cl-white));
 
+      @media only screen and (max-width: 1279px) {
+        padding: 0 14px;
+      }
+
       @media only screen and (max-width: 767px) {
         width: auto;
+        padding: 0;
         font-size: 38px;
         line-height: 40px;
       }
@@ -127,10 +132,20 @@
               display: flex;
               align-items: center;
               flex-shrink: 0;
+              width: 28px;
+              height: 28px;
+              padding: 4px;
+              background-color: rgb(var(--cl-green));
+              border-radius: 50%;
 
               @media only screen and (max-width: 767px) {
                 width: 20px;
                 height: 20px;
+              }
+
+              svg {
+                stroke: rgb(var(--cl-white));
+                fill: transparent;
               }
             }
 
